# locad-ad-simulator-v3

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: promote_evaluator.yml  run_evals.yml  validate_ad.yml
configs/: default.yaml  models.yaml
configs/gates/: loose.yaml  standard.yaml  strict.yaml
configs/panels/: committee_default.yaml  gcc_growth_panel.yaml  usa_founder_panel.yaml  usa_gcc_balanced.yaml
configs/report_templates/: markdown_report.yaml  pr_comment.yaml
data/benchmarks/: ad_history.csv  benchmark_bands.yaml  campaign_outcomes.csv  human_scores.csv
data/brand/: competitors.yaml  locad.yaml  positioning.yaml  proof_points.yaml  restricted_claims.yaml
data/feedback/: report_feedback.csv  reviewer_labels.csv
data/personas/: buyer_personas.json
data/rules/: ad_claim_rules.yaml  dos_and_donts.yaml  localization_rules.yaml  risk_rules.yaml
docs/: architecture.md  chatgpt_baseline_comparison.md  evaluator_versions.md  icp_schema.md  scoring_model.md  self_improvement_loop.md
evals/: run_eval_suite.py
evals/evaluator_versions/: v0.1.0.yaml  v0.2.0.yaml
evals/holdout_ads/: README.md
inputs/ads/: README.md  sample_locad_ad_copy.txt
inputs/batches/: sample_ab_test.yaml  sample_campaign.yaml
reports/: README.md
scripts/: calibrate_scores.py  compile_icps.py  ingest_feedback.py  run_baseline.py  run_committee_sim.py  validate_ad.py  validate_batch.py
tests/: test_claim_extractor.py  test_evidence_linter.py  test_icp_compiler.py  test_panel_coverage.py  test_scoring.py
(+73 files in other folders)
