[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locad-ad-simulator"
version = "0.2.0"
description = "ICP-grounded synthetic ad validation engine for Locad."
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.34.0", "openai>=1.40.0"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
